--- a/src/app/photo-show/photo-show.component.html
+++ b/src/app/photo-show/photo-show.component.html
@@ -1,2 +1,5 @@
-<button (click)="onClick()")>Fetch Image</button>
-<img [src]="photoUrl" alt="">
+<div>
+    <button (click)="onClick()">Fetch Image</button>
+</div>
+
+<img [src]="photoUrl" alt="" *ngIf="photoUrl">
